k8s/overlays/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nawhas-ingress
spec:
  tls:
    - hosts:
      - api.staging.nawhas.com
      - staging.nawhas.com
      - search.staging.nawhas.com
      secretName: nawhas-tls
  rules:
    - host: api.staging.nawhas.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-nginx
                port:
                  number: 80
    - host: staging.nawhas.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web
                port:
                  number: 3000
    - host: search.staging.nawhas.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: search
                port:
                  number: 7700
